# vdnsd

./: CMakeLists.txt  README.md  debug_cmake.sh  vdns.conf  vdnsd.conf.example
src/: config.c  config.h  dns.c  dns.h  dns_cache.c  dns_cache.h  dnsworker.c  dnsworker.h  import.c  import.h  logger.c  logger.h  main.c  main.h  pid.c  pid.h  qps_counter.c  qps_counter.h  redis.c  redis.h  thpool.c  thpool.h
src/tests/: dns_cache_tests.c
